--- a/program-info/current/degree-course-sequencing.html
+++ b/program-info/current/degree-course-sequencing.html
@@ -70,6 +70,9 @@
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="facstaff">Meet the Faculty and Staff</a>
   </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="degrees-certificates">Degrees and Certificates</a>
+  </li>
   <li class="nav-item is-current-page" data-depth="2">
     <a class="nav-link" href="degree-course-sequencing">Degree Course Sequencing</a>
   </li>
